# tracker

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  SKILL.md  pyproject.toml
.github/: copilot-instructions.md
config/: inference_weights.yaml  known_persons.yaml  watched_channels.yaml  watched_channels_test.yaml
docs/: channel-aware-classification-guide.md  frontend-api-testing-guide.md  ios-api-update-guide-2026-04-12.md  ios-backend-integration-guide.md  swiftui-ios-api-guide.md  youtube-fetcher-migration-guide.md
docs/architecture/: classification-prompt.md  db-design.md  development-plan.md  fastapi-checklist.md  ingestion-youtube-openapi-draft.md  ingestion-youtube-test-matrix.md  llm-phase-development-plan.md  video-summary-schema-draft.md  youtube-watch-cron-development-plan.md
dummy/taner_genek/: example-1  example-2
scripts/: backfill_video_person.py  compare_llm_classifiers.py  compare_youtube_fetchers.py  force_full_run.py  load_dev_data.py  run_api.sh
src/: auth.py  cache.py  config.py  database.py  exceptions.py  main.py  models.py
src/channels/: dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
src/classification/: constants.py  exceptions.py  models.py  router.py  schemas.py  service.py
src/ingestion/: router.py  schemas.py  service.py
src/jobs/: README.md  __init__.py
src/llm/: __init__.py  prompts.py  service.py
src/market_inference/: constants.py  models.py  router.py  schemas.py  service.py  weights.py
src/persons/: dependencies.py  detector.py  exceptions.py  (+4 more)
tests/: conftest.py
(+47 files in other folders)
