[project]
name = "tracker"
version = "0.1.0"
description = "Social media content tracker — classify transcripts by topic and track timelines"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlmodel>=0.0.22",
    "uvicorn[standard]>=0.30.0",
    "python-slugify>=8.0.0",
    "pydantic-settings>=2.0.0",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.3.17",
    "psycopg2-binary>=2.9.0",
    "pyyaml>=6.0.3",
    "openai>=1.55.0",
    "tweepy>=4.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[tool.fastapi]
entrypoint = "src.main:app"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "FAST"]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.9",
]
